--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head>
   <title>Trekk Panda</title>
+  
+  <link rel="stylesheet" href="style.css">
   </head>
 <div class="photo-album">
 
