--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
 <div class="photo-album">
 
-  <h1><span>Nat <abbr title="and" class="amp">&amp;</abbr> Simon in New Zealand</span></h1>
+  <h1><span>Sandhan Valley <abbr title="and" class="amp">&amp;</abbr> TrekkPanda </span></h1>
 
   <a href="http://www.flickr.com/photos/nataliedowne/2254117707/in/set-72157604232220981" class="large polaroid img1"><img src="http://media.24ways.org/2009/14/img/volcanic.jpg" alt="">This breathtaking volcanic lake is at Wai-O-Tapu Thermal Wonderland</a>
   <a href="http://www.flickr.com/photos/nataliedowne/2254700486/in/set-72157604232220981/" class="polaroid img2"><img src="http://media.24ways.org/2009/14/img/waterfall.jpg" alt="">This lovely waterfall was at Rotorua in Rainbow Springs</a>
